Changes in Release 2.3.4
=============================================
[SIDP-510] - Error with stack trace when passive cannot be honored
[SIDP-511] - ExternalAuthnSystemLoginHandler does not support forceAuthn/isPassive
[SIDP-513] - idpui taglib could look for more languages matches
[SIDP-514] - Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
[SIDP-516] - Example login.jsp / Usage of label tag
[SIDP-519] - Switching between multiple login handlers cause first context to be sticky in Shib-Authentication-Method
[SIDP-520] - Ipad/iOS devices will auto capitalize text entered into the IdP login screen, which can cause errors. Adding an HTML element will prevent that
[SIDP-522] - supplied examples shouldn't promote federation URIs as relying parties
[SIDP-523] - Add access to inbound AuthnRequest

Changes in Release 2.3.3
=============================================
[SIDP-504] - Alt text generate for logo has mismatched quoting

Changes in Release 2.3.2
=============================================
[SIDP-500] - shibboleth-identityprovider-2.3.1 installer broken on Windows 7 (64-bit) and Windows XP
 - Update version of Shib Common library

Changes in Release 2.3.1
=============================================
[SIDP-490] - REMOTE_USER handler not detecting empty value
[SIDP-491] - Stylesheet link in login.jsp is not inside the head tag
[SIDP-492] - bin/version causes exception
[SIDP-494] - login.config sample needs updating
[SIDP-497] - Queries should return the same NameID supplied by the caller

Changes in Release 2.3.0
=============================================
[SIDP-272] - Regenerate self-signed certificate with installer task
[SIDP-404] - Add an install-time setting for the path to web.xml
[SIDP-429] - Limit metadata SP credential resolution for encryption to RSA keys only
[SIDP-442] - Add JSESSIONID and ClientIP to MDC
[SIDP-448] - Create a login handler that provides authn "state" data to an external authentication 